--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,12 @@
 		"noFallthroughCasesInSwitch": true,
 
 		"paths": {
-			"#*": ["./*"]
+			"#*": [
+				"./*"
+			],
+			"@/*": [
+				"./playground/*"
+			],
 		}
 	}
 }
