fix: update import-from-string to v5

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,18 +2,9 @@
 	"compilerOptions": {
 		"target": "ESNext",
 		"module": "ESNext",
-		"skipLibCheck": true,
-		"allowJs": true,
 
 		/* Bundler mode */
 		"moduleResolution": "bundler",
-		"resolveJsonModule": true,
-
-		/* Linting */
-		"strict": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"noFallthroughCasesInSwitch": true,
 
 		"paths": {
 			"#*": [
@@ -21,7 +12,16 @@
 			],
 			"@/*": [
 				"./playground/*"
-			],
-		}
+			]
+		},
+		"resolveJsonModule": true,
+		"allowJs": true,
+
+		/* Linting */
+		"strict": true,
+		"noFallthroughCasesInSwitch": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"skipLibCheck": true
 	}
 }
