--- a/package.json
+++ b/package.json
@@ -1,15 +1,33 @@
 {
 	"name": "bundle-import",
-	"version": "0.0.1",
 	"type": "module",
+	"version": "0.0.1",
+	"packageManager": "pnpm@9.12.1",
 	"description": "Bundle and load a file using the import-from-string.",
 	"imports": {
 		"#*": "./*"
 	},
+	"author": "CondorHero",
+	"license": "MIT",
+	"homepage": "https://github.com/condorheroblog/bundle-import#readme",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/condorheroblog/bundle-import.git"
+	},
+	"bugs": {
+		"url": "https://github.com/condorheroblog/bundle-import/issues"
+	},
+	"keywords": [
+		"module-from-string",
+		"load-from-config",
+		"bundle-import",
+		"bundle-require",
+		"bundle-import"
+	],
 	"exports": {
 		".": {
-			"require": "./dist/index.cjs",
-			"import": "./dist/index.mjs"
+			"import": "./dist/index.mjs",
+			"require": "./dist/index.cjs"
 		}
 	},
 	"main": "dist/index.cjs",
@@ -32,70 +50,40 @@
 		"dev:cjs": "esno playground/index.cjs",
 		"lint": "eslint .",
 		"lint:fix": "eslint . --fix",
-		"format": "prettier --write .",
 		"test": "vitest",
 		"build": "rimraf dist && rollup -c",
 		"build:watch": "rimraf dist && rollup -c -w",
 		"typecheck": "tsc --noEmit",
 		"release": "bumpp -r && pnpm -r publish --access public"
 	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/condorheroblog/bundle-import.git"
-	},
-	"keywords": [
-		"module-from-string",
-		"load-from-config",
-		"bundle-import",
-		"bundle-require",
-		"bundle-import"
-	],
-	"author": "CondorHero",
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/condorheroblog/bundle-import/issues"
-	},
-	"homepage": "https://github.com/condorheroblog/bundle-import#readme",
 	"dependencies": {
-		"get-tsconfig": "^4.7.2",
-		"import-from-string": "^0.0.4"
+		"get-tsconfig": "^4.8.1",
+		"import-from-string": "^0.0.5"
+	},
+	"devDependencies": {
+		"@antfu/eslint-config": "^3.8.0",
+		"@rollup/plugin-json": "^6.1.0",
+		"@types/node": "^22.9.0",
+		"bumpp": "^9.8.1",
+		"eslint": "^9.14.0",
+		"esno": "^4.8.0",
+		"lint-staged": "^15.2.10",
+		"rimraf": "^6.0.1",
+		"rollup": "^4.24.4",
+		"rollup-plugin-dts": "^6.1.1",
+		"rollup-plugin-esbuild": "^6.1.1",
+		"rollup-plugin-node-externals": "^7.1.3",
+		"simple-git-hooks": "^2.11.1",
+		"typescript": "^5.6.3",
+		"vitest": "^2.1.4"
 	},
 	"simple-git-hooks": {
 		"pre-commit": "npx lint-staged"
 	},
 	"lint-staged": {
-		"*.{ts,js,mjs,cjs,json}": [
-			"eslint --fix",
-			"prettier --write"
-		],
-		"*.md": [
+		"*.{ts,js,mjs,cjs,json,md}": [
 			"eslint --fix"
 		]
-	},
-	"devDependencies": {
-		"@rollup/plugin-json": "^6.0.1",
-		"@trivago/prettier-plugin-sort-imports": "^4.2.1",
-		"@types/node": "^20.8.10",
-		"@typescript-eslint/eslint-plugin": "^6.10.0",
-		"@typescript-eslint/parser": "^6.10.0",
-		"bumpp": "^9.2.0",
-		"eslint": "^8.52.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-import": "^2.29.0",
-		"eslint-plugin-mdx": "^2.2.0",
-		"eslint-plugin-node-import": "^1.0.4",
-		"eslint-plugin-prettier": "^5.0.1",
-		"esno": "^0.17.0",
-		"lint-staged": "^15.0.2",
-		"prettier": "^3.0.3",
-		"rimraf": "^5.0.5",
-		"rollup": "^4.3.0",
-		"rollup-plugin-dts": "^6.1.0",
-		"rollup-plugin-esbuild": "^6.1.0",
-		"rollup-plugin-node-externals": "^6.1.2",
-		"simple-git-hooks": "^2.9.0",
-		"typescript": "^5.2.2",
-		"vitest": "^0.34.6"
 	},
 	"publishConfig": {
 		"access": "public",
